<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_24"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/title_person" />

</menu>