<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.person.user.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avatar_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/gray_light"
            app:civ_border_width="3dp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Breeze"
            android:textSize="20sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_nickname_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Br33z3"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_sex_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="786842437@qq.com"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_intro_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        />

    <LinearLayout
        android:id="@+id/change_pwd_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pwd_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pwd"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_pri"
        android:layout_marginTop="6dp"
        android:text="@string/info_logout_text" />

</LinearLayout>