<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cby2112114536.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_videoItemFragment"
            app:destination="@id/videoItemFragment" />
        <action
            android:id="@+id/action_navigation_home_to_webFragment"
            app:destination="@id/webFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_person"
            app:destination="@id/navigation_person" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.cby2112114536.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_navigation_movie_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.cby2112114536.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" >
        <action
            android:id="@+id/action_navigation_chart_to_webFragment"
            app:destination="@id/webFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.cby2112114536.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_videoItemFragment"
            app:destination="@id/videoItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.cby2112114536.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" >
        <action
            android:id="@+id/action_navigation_person_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_navigation_person_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/videoItemFragment"
        android:name="com.example.cby2112114536.ui.home.videoitem.VideoItemFragment"
        android:label="fragment_video_item"
        tools:layout="@layout/fragment_video_item" >
        <action
            android:id="@+id/action_videoItemFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/webFragment"
        android:name="com.example.cby2112114536.ui.web.WebFragment"
        android:label="fragment_web"
        tools:layout="@layout/fragment_web" >
        <argument
            android:name="url"
            app:argType="string"
            android:defaultValue="https://www.imdb.com" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.example.cby2112114536.ui.movie.detail.MovieDetailFragment"
        android:label="fragment_movie_detail"
        tools:layout="@layout/fragment_movie_detail" >
        <argument
            android:name="record"
            app:argType="com.example.cby2112114536.DTO.InfoPageDTO$DataDTO$RecordsDTO" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.cby2112114536.ui.person.user.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_findPwdFragment"
            app:destination="@id/findPwdFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.example.cby2112114536.ui.person.user.InfoFragment"
        android:label="fragment_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.cby2112114536.ui.person.user.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/findPwdFragment"
        android:name="com.example.cby2112114536.ui.person.user.FindPwdFragment"
        android:label="fragment_find_pwd"
        tools:layout="@layout/fragment_find_pwd" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.cby2112114536.ui.home.videoitem.map.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" />
</navigation>